Fix some code issues, make MailStatus public so Reflection works.

--- a/src/me/piero512/spammer/main.fxml
+++ b/src/me/piero512/spammer/main.fxml
@@ -1,6 +1,6 @@
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 <BorderPane fx:controller="me.piero512.spammer.Controller"
             xmlns:fx="http://javafx.com/fxml">
     <center>
@@ -38,7 +38,7 @@
                         </placeholder>
                         <columns>
                             <TableColumn fx:id="mailColumn" text="Correos"/>
-                            <TableColumn fx:id="sentColumn"  text="Enviado?"/>
+                            <TableColumn fx:id="sentColumn" text="Enviado?"/>
                         </columns>
                     </TableView>
                 </VBox>
@@ -55,7 +55,7 @@
                         </HBox>
                     </top>
                     <center>
-                        <VBox>
+                        <VBox spacing="20">
                             <padding>
                                 <Insets right="10"/>
                             </padding>
